[metadata]
name = tyler
url = https://github.com/kaczmarj/tyler
author = Jakub Kaczmarzyk
author_email = jakub.kaczmarzyk@gmail.com
description = Extract tiles from whole slide images.
license = Apache License, 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = tyler
python_requires = >= 3.7
install_requires =
    numpy >= 1.10
    openslide-python >= 1.0
    pillow >= 4.2.0
    scikit-image >= 0.14.0

[options.extras_require]
dev =
    black
    codecov
    flake8
    mypy == 0.812
    pytest >= 6.0
    pytest-cov >= 2.0.0

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov=tyler --cov-config=setup.cfg --verbose
